--- a/ManagePeople.API.Service/ManagePeople.Repository.csproj
+++ b/ManagePeople.API.Service/ManagePeople.Repository.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ManagePeople.Data\ManagePeople.Data.csproj" />
+  </ItemGroup>
+
 </Project>
