--- a/ManagePeople.Business.Service/ManagePeople.Business.csproj
+++ b/ManagePeople.Business.Service/ManagePeople.Business.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ManagePeople.Data\ManagePeople.Data.csproj" />
+    <ProjectReference Include="..\ManagePeople.ViewModels\ManagePeople.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
