--- a/ManagePeople.Web/ManagePeople.Web.csproj
+++ b/ManagePeople.Web/ManagePeople.Web.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ManagePeople.API.Service\ManagePeople.Repository.csproj" />
+    <ProjectReference Include="..\ManagePeople.Business.Service\ManagePeople.Business.csproj" />
+  </ItemGroup>
+
 </Project>
